@@ -222,6 +222,166 @@ class Codebird
     }
 
     /**
+     * Get allowed API methods, sorted by GET or POST
+     * Watch out for multiple-method "account/settings"!
+     *
+     * @return array $apimethods
+     */
+    function getApiMethods()
+    {
+        static $apimethods = array(
+            'GET' => array(
+                // Timelines
+                'statuses/mentions_timeline',
+                'statuses/user_timeline',
+                'statuses/home_timeline',
+                'statuses/retweets_of_me',
+
+                // Tweets
+                'statuses/retweets/:id',
+                'statuses/show/:id',
+                'statuses/oembed',
+
+                // Search
+                'search/tweets',
+
+                // Direct Messages
+                'direct_messages',
+                'direct_messages/sent',
+                'direct_messages/show',
+
+                // Friends & Followers
+                'friendships/no_retweets/ids',
+                'friends/ids',
+                'followers/ids',
+                'friendships/lookup',
+                'friendships/incoming',
+                'friendships/outgoing',
+                'friendships/show',
+                'friends/list',
+                'followers/list',
+
+                // Users
+                'account/settings',
+                'account/verify_credentials',
+                'blocks/list',
+                'blocks/ids',
+                'users/lookup',
+                'users/show',
+                'users/search',
+                'users/contributees',
+                'users/contributors',
+                'users/profile_banner',
+
+                // Suggested Users
+                'users/suggestions/:slug',
+                'users/suggestions',
+                'users/suggestions/:slug/members',
+
+                // Favorites
+                'favorites/list',
+
+                // Lists
+                'lists/list',
+                'lists/statuses',
+                'lists/memberships',
+                'lists/subscribers',
+                'lists/subscribers/show',
+                'lists/members/show',
+                'lists/members',
+                'lists/show',
+                'lists/subscriptions',
+
+                // Saved searches
+                'saved_searches/list',
+                'saved_searches/show/:id',
+
+                // Places & Geo
+                'geo/id/:place_id',
+                'geo/reverse_geocode',
+                'geo/search',
+                'geo/similar_places',
+
+                // Trends
+                'trends/place',
+                'trends/available',
+                'trends/closest',
+
+                // OAuth
+                'oauth/authenticate',
+                'oauth/authorize',
+
+                // Help
+                'help/configuration',
+                'help/languages',
+                'help/privacy',
+                'help/tos',
+                'application/rate_limit_status'
+            ),
+            'POST' => array(
+                // Tweets
+                'statuses/destroy/:id',
+                'statuses/update',
+                'statuses/retweet/:id',
+                'statuses/update_with_media',
+
+                // Direct Messages
+                'direct_messages/destroy',
+                'direct_messages/new',
+
+                // Friends & Followers
+                'friendships/create',
+                'friendships/destroy',
+                'friendships/update',
+
+                // Users
+                'account/settings__post',
+                'account/update_delivery_device',
+                'account/update_profile',
+                'account/update_profile_background_image',
+                'account/update_profile_colors',
+                'account/update_profile_image',
+                'blocks/create',
+                'blocks/destroy',
+                'account/update_profile_banner',
+                'account/remove_profile_banner',
+
+                // Favorites
+                'favorites/destroy',
+                'favorites/create',
+
+                // Lists
+                'lists/members/destroy',
+                'lists/subscribers/create',
+                'lists/subscribers/destroy',
+                'lists/members/create_all',
+                'lists/members/create',
+                'lists/destroy',
+                'lists/update',
+                'lists/create',
+                'lists/members/destroy_all',
+
+                // Saved Searches
+                'saved_searches/create',
+                'saved_searches/destroy/:id',
+
+                // Places & Geo
+                'geo/place',
+
+                // Spam Reporting
+                'users/report_spam',
+
+                // OAuth
+                'oauth/access_token',
+                'oauth/request_token',
+                'oauth2/token',
+                'oauth2/invalidate_token'
+            )
+        );
+        return $apimethods;
+    }
+
+    /**
      * Main API handler working on any requests you issue
      *
      * @param string $fn    The member function you called
@@ -589,155 +749,8 @@ class Codebird
                 break;
         }
 
-        $httpmethods         = array();
-        $httpmethods['GET']  = array(
-            // Timelines
-            'statuses/mentions_timeline',
-            'statuses/user_timeline',
-            'statuses/home_timeline',
-            'statuses/retweets_of_me',
-
-            // Tweets
-            'statuses/retweets/:id',
-            'statuses/show/:id',
-            'statuses/oembed',
-
-            // Search
-            'search/tweets',
-
-            // Direct Messages
-            'direct_messages',
-            'direct_messages/sent',
-            'direct_messages/show',
-
-            // Friends & Followers
-            'friendships/no_retweets/ids',
-            'friends/ids',
-            'followers/ids',
-            'friendships/lookup',
-            'friendships/incoming',
-            'friendships/outgoing',
-            'friendships/show',
-            'friends/list',
-            'followers/list',
-
-            // Users
-            'account/settings',
-            'account/verify_credentials',
-            'blocks/list',
-            'blocks/ids',
-            'users/lookup',
-            'users/show',
-            'users/search',
-            'users/contributees',
-            'users/contributors',
-            'users/profile_banner',
-
-            // Suggested Users
-            'users/suggestions/:slug',
-            'users/suggestions',
-            'users/suggestions/:slug/members',
-
-            // Favorites
-            'favorites/list',
-
-            // Lists
-            'lists/list',
-            'lists/statuses',
-            'lists/memberships',
-            'lists/subscribers',
-            'lists/subscribers/show',
-            'lists/members/show',
-            'lists/members',
-            'lists/show',
-            'lists/subscriptions',
-
-            // Saved searches
-            'saved_searches/list',
-            'saved_searches/show/:id',
-
-            // Places & Geo
-            'geo/id/:place_id',
-            'geo/reverse_geocode',
-            'geo/search',
-            'geo/similar_places',
-
-            // Trends
-            'trends/place',
-            'trends/available',
-            'trends/closest',
-
-            // OAuth
-            'oauth/authenticate',
-            'oauth/authorize',
-
-            // Help
-            'help/configuration',
-            'help/languages',
-            'help/privacy',
-            'help/tos',
-            'application/rate_limit_status'
-        );
-        $httpmethods['POST'] = array(
-            // Tweets
-            'statuses/destroy/:id',
-            'statuses/update',
-            'statuses/retweet/:id',
-            'statuses/update_with_media',
-
-            // Direct Messages
-            'direct_messages/destroy',
-            'direct_messages/new',
-
-            // Friends & Followers
-            'friendships/create',
-            'friendships/destroy',
-            'friendships/update',
-
-            // Users
-            'account/settings__post',
-            'account/update_delivery_device',
-            'account/update_profile',
-            'account/update_profile_background_image',
-            'account/update_profile_colors',
-            'account/update_profile_image',
-            'blocks/create',
-            'blocks/destroy',
-            'account/update_profile_banner',
-            'account/remove_profile_banner',
-
-            // Favorites
-            'favorites/destroy',
-            'favorites/create',
-
-            // Lists
-            'lists/members/destroy',
-            'lists/subscribers/create',
-            'lists/subscribers/destroy',
-            'lists/members/create_all',
-            'lists/members/create',
-            'lists/destroy',
-            'lists/update',
-            'lists/create',
-            'lists/members/destroy_all',
-
-            // Saved Searches
-            'saved_searches/create',
-            'saved_searches/destroy/:id',
-
-            // Places & Geo
-            'geo/place',
-
-            // Spam Reporting
-            'users/report_spam',
-
-            // OAuth
-            'oauth/access_token',
-            'oauth/request_token',
-            'oauth2/token',
-            'oauth2/invalidate_token'
-        );
-        foreach ($httpmethods as $httpmethod => $methods) {
+        $apimethods = $this->getApiMethods();
+        foreach ($apimethods as $httpmethod => $methods) {
             if (in_array($method, $methods)) {
                 return $httpmethod;
             }
